fix: Empty courses list margin reset. Header name spacings

--- a/src/components/Courses/components/EmptyCourseList/EmptyCourseList.module.css
+++ b/src/components/Courses/components/EmptyCourseList/EmptyCourseList.module.css
@@ -2,11 +2,16 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, calc(-50% - 2em));
   text-align: center;
   display: flex;
   flex-direction: column;
-  row-gap: 1.5em;
+  gap: 1.5em;
+}
+
+.empty h1,
+.empty p {
+  margin: 0em;
 }
 
 .empty button {
